[package]
name = "finalizer-patcher"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
itertools = "0.14.0"
k8s-openapi = { version = "0.25.0", features = ["earliest"] }
kube = "1.1.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
