[package]
name = "kubesaw-cleaner"
version = "0.1.0"
edition = "2024"
description = "A small tool to assist in removing kubesaw from a cluster"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6.5"
itertools = "0.14.0"
k8s-openapi = { version = "0.25.0", features = ["earliest"] }
kube = "1.1.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
